# snowflake_start_guide_sample_codes

./: README.md
.devcontainer/dbt/: devcontainer.json
.devcontainer/terraform/: devcontainer.json
.github/workflows/: dbt.yaml  terragrunt.yaml
dbt_202410/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dbt_202410/.dbt/: profiles.yml
dbt_202410/demo_project/: dbt_project.yml  packages.yml
dbt_202410/demo_project/models/source/: _source.yml
dbt_202410/demo_project/models/staging/: stg_rds_snapshot_sample_table.sql
terraform_202410/: .env.sample  .gitignore  Dockerfile.terraform  Dockerfile.terragrunt  README.md  docker-compose.yml  terragrunt.hcl
terraform_202410/development/: terragrunt.hcl
terraform_202410/modules/demo/: database.tf  warehouse.tf
