[tool.poetry]
name = "dbt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.setuptools.package-data]
"workflows" = ["py.typed"]

[tool.poetry.dependencies]
python = "3.11.9"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
dbt-osmosis = "~0.13"
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.23.2"}

[tool.poetry.group.dbt]
optional = true
[tool.poetry.group.dbt.dependencies]
dbt-core = "~1.8"
dbt-snowflake = "~1.8"
jinja2 = "~3.1"
snowflake-connector-python = {version = "~3.12", extras = ["secure-local-storage"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
